styles/components/organisms/calculationResult.module.scss
@import '../../abstract/colors';
@import '../../abstract/mixins';

.container {
  width: 100%;
  background-color: #{$primary-white};
  padding: 32px 16px;
  display: flex;
  flex-direction: column;
}

.title {
  font-family: var(--kanyon);
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #{$primary-black};
  text-align: center;
}

.subtitle {
  margin-top: 2px;
  font-family: var(--open-sans);
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  text-align: center;
  color: #{$shades-grey-75};
  mix-blend-mode: normal;
}

.dataHeaderWrapper {
  margin-top: 32px;
  padding: 0 12px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
}

.dataHeaderWrapperUsedCar {
  margin-top: 32px;
  padding: 0 10px;
  padding-left: 40px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
}

.dataHeaderText {
  font-family: var(--open-sans-bold);
  font-style: normal;
  font-weight: 700;
  font-size: 11px;
  line-height: 16px;
  text-align: right;
  color: #{$shades-grey-75};
  mix-blend-mode: normal;
  text-align: center;
}

.dataHeaderTextSmall {
  @extend .dataHeaderText;
  font-family: var(--open-sans-semi-bold) !important;
  font-weight: 600 !important;
}
.tenorHeader {
  min-width: 106px;
}

.listWrapper {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.ctaGroup {
  margin-top: 32px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

.whatsappCtaTextWrapper {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 4px;
  font-family: var(--open-sans);
  font-size: 14px;
  line-height: 20px;
  text-align: center;
  color: #{$primary-dark-blue};
}

.whiteColor {
  color: #{$primary-white};
}

.disclaimerWrapper {
  width: 100%;
  margin-top: 16px;
}

.disclaimerText {
  font-family: var(--open-sans);
  font-style: normal;
  font-weight: 400;
  font-size: 11px;
  line-height: 16px;
  color: #{$shades-grey-75};
  mix-blend-mode: normal;
}

.logoFincoWrapper {
  margin-top: 4px;
  margin-left: 8px;
  display: flex;
  align-items: center;
}

.logoAcc {
}

.logoTaf {
  margin-left: 8px;
}

.bordered {
  position: relative;
  border-radius: 8px;
  z-index: 999;
  border: 4px solid white;
  scroll-margin-bottom: 40px;
}

.overlayAdditionalStyle {
  @include centeredWithMaxWidth;
}

.overlayAdditionalStyleExtend {
  @include centeredWithMaxWidthExtend;
}

